<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/text_1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/text_2"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/gray"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="@+id/text_1"
        app:layout_constraintStart_toStartOf="@+id/text_1"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        />

    <TextView
        android:id="@+id/text_editable"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/text_editable"
        android:textAlignment="gravity"
        android:gravity="center"
        android:background="@color/gray"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/text_2"
        app:layout_constraintStart_toStartOf="@+id/text_2"
        app:layout_constraintTop_toBottomOf="@+id/text_2"
        />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/hint_default"
        android:autofillHints="@string/hint_default"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/text_editable"
        app:layout_constraintStart_toStartOf="@+id/text_editable"
        app:layout_constraintTop_toBottomOf="@+id/text_editable"
        />

    <Button
        android:id="@+id/button_1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_blue"
        android:text="@string/azul"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/input_text"
        app:layout_constraintStart_toStartOf="@+id/input_text"
        app:layout_constraintTop_toBottomOf="@+id/input_text" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_red"
        android:text="@string/rojo"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_orange"
        android:text="@string/naranja"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_black"
        android:text="@string/negro"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_3"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_green"
        android:text="@string/verde"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_4"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

</androidx.constraintlayout.widget.ConstraintLayout>